# aws-guardduty-runbook-generator

./: LICENSE.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: publish.yml
guardduty-runbooks/: cli.py  guardduty.py  utils.py
guardduty_runbooks/: cli.py  guardduty.py  utils.py
