[build-system]
requires = ["setuptools>=62.0.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "guardduty-runbooks"
authors = [
    {name = "Dustin Whited", email = "dustin.whited@aquia.us"},
]
description = "GuardDuty Runbook Generator"
requires-python = ">=3.9"
version = "1.0.0"
license = {file = "LICENSE"}
readme = "README.md"
dependencies = [
    "markdownify>=0.11.6",
    "docopt>=0.6.2",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
]

[project.scripts]
aws_assessment = "guardduty-runbooks.cli:main"
